--- a/app/public/assets/scss/_main.scss
+++ b/app/public/assets/scss/_main.scss
@@ -66,6 +66,12 @@ body {
 		@media (min-width: 1201px) { background: #dcdcdc; }	
 	}
 	.navbar {
+		img.logo {
+			width: 23px;
+			margin-right: 7px;
+			margin-top: -6px;
+		}
+
 		h1.navbar-brand-h1 {
 			margin-top: -9px;
 		}
@@ -268,13 +274,18 @@ body {
 				h1,h2,h3 {
 					font-size: 24px;
 					color: #444;
+					margin-top: 50px;
 				}
 				h4 {
-					font-size: 23px;
+					font-size: 20px;
 					color: #444;
 				}
-				h5,h6 {
-					font-size: 20px;
+				h5 {
+					font-size: 19px;
+					color: #444;
+				}
+				h6 {
+					font-size: 18px;
 					color: #444;
 				}
 				img {
@@ -302,6 +313,20 @@ body {
 						float:left;
 						margin-right: 20px;
 						margin-bottom: 5px;
+					}
+				}
+				blockquote {
+					border-left: 3px solid #c1c1c1;
+					padding: 6px 0px 0px 13px;
+					color: #555;
+					font-size: 15px;
+				}
+				pre {
+					background: #f5f5f5;
+					padding: 13px 25px;
+					border-radius: 3px;
+					code {
+
 					}
 				}
 			}
