--- a/app/public/assets/scss/_main.scss
+++ b/app/public/assets/scss/_main.scss
@@ -92,6 +92,7 @@ body {
 	}
 	.big-banner {
 		background-size: cover;
+		// relate: big-banner:before
 		@media (max-width: 575px) {
 			background-image: url("/assets/img/top/bg-575.png");
 			height: 575px;
@@ -112,12 +113,57 @@ body {
 			height: 680px;
 			background-position: center 50%;
 		}
+		// @media (min-width: 1201px) {
+		// 	background-image: url("/assets/img/top/bg-1680.jpg");
+		// 	height: 680px;
+		// 	background-position: 0 0;
+		// 	// background-position: center 0px;
+		// 	background-repeat: no-repeat;
+		// 	background-size: cover;
+  	// 	position: relative;
+		// 	z-index: 0;
+  	// 	overflow: hidden;
+		// }
 		@media (min-width: 1201px) {
 			background-image: url("/assets/img/top/bg-1680.png");
 			height: 680px;
-			background-position: center 60%;
+			background-position: 50% top, 50% 0;
+			// background-position: center 0px;
+			background-repeat: no-repeat, no-repeat;
+			// background-position: center 0;
+			background-attachment: fixed;
+			background-size: cover;
+  		position: relative;
+			z-index: 0;
+  		overflow: hidden;
+		}
+		.container {
+			h1 {
+				color: #fff;
+				font-family: sans-serif;
+			}
+			p.lead {
+				color: rgb(204, 204, 204);
+			}
+			
 		}
 	}
+	.big-banner-before:before {
+		// content: '';
+		// background: inherit;
+		// -webkit-filter: blur(0px);
+		// -moz-filter: blur(0px);
+		// -o-filter: blur(0px);
+		// -ms-filter: blur(0px);
+		// filter: blur(0px);
+		// position: absolute;
+		// top: -5px;
+		// left: -5px;
+		// right: -5px;
+		// bottom: -5px;
+		// z-index: -1;
+	}
+	
 	/* Login */
 	.login-contents-block {
 		.login {
@@ -325,8 +371,17 @@ body {
 					background: #f5f5f5;
 					padding: 13px 25px;
 					border-radius: 3px;
+				}
+				p {
 					code {
-
+						color: #666;
+						font-weight: normal;
+						font-size: 15px;
+						background: #f5f5f5;
+						border: 1px solid #c1c1c1;
+						padding: 2px 5px;
+						border-radius: 3px;
+						margin: 0px 4px;
 					}
 				}
 			}
