--- a/app/public/assets/scss/_main.scss
+++ b/app/public/assets/scss/_main.scss
@@ -54,6 +54,17 @@ body {
   animation-iteration-count: 1;
 	@include set-sans-serif();
 
+	/* 右クリック制御 */
+	img {
+		pointer-events: none;
+		-webkit-touch-callout:none;
+		-webkit-user-select:none;
+		-moz-touch-callout:none;
+		-moz-user-select:none;
+		touch-callout:none;
+		user-select:none;
+	}
+
 	.topbar {
 		height: 5px;
 		width: 100%;
@@ -96,22 +107,46 @@ body {
 		@media (max-width: 575px) {
 			background-image: url("/assets/img/top/bg-575.png");
 			height: 575px;
-			background-position: center 50%;
+			background-position: 50% top, 50% 0;
+			background-repeat: no-repeat, no-repeat;
+			background-attachment: fixed;
+			background-size: cover;
+  		position: relative;
+			z-index: 0;
+  		overflow: hidden;
 		}
 		@media (min-width: 576px) and (max-width: 768px) {
 			background-image: url("/assets/img/top/bg-768.png");
 			height: 680px;
-			background-position: center 50%;
+			background-position: 50% top, 50% 0;
+			background-repeat: no-repeat, no-repeat;
+			background-attachment: fixed;
+			background-size: cover;
+  		position: relative;
+			z-index: 0;
+  		overflow: hidden;
 		}
 		@media (min-width: 769px) and (max-width: 992px) {
 			background-image: url("/assets/img/top/bg-992.png");
 			height: 680px;
-			background-position: center 50%;
+			background-position: 50% top, 50% 0;
+			background-repeat: no-repeat, no-repeat;
+			background-attachment: fixed;
+			background-size: cover;
+  		position: relative;
+			z-index: 0;
+  		overflow: hidden;
 		}
 		@media (min-width: 993px) and (max-width: 1200px) {
 			background-image: url("/assets/img/top/bg-1200.png");
 			height: 680px;
-			background-position: center 50%;
+			background-position: 50% top, 50% 0;
+			background-repeat: no-repeat, no-repeat;
+			background-attachment: fixed;
+			background-size: cover;
+  		position: relative;
+			z-index: 0;
+  		overflow: hidden;
 		}
 		// @media (min-width: 1201px) {
 		// 	background-image: url("/assets/img/top/bg-1680.jpg");
@@ -128,9 +163,7 @@ body {
 			background-image: url("/assets/img/top/bg-1680.png");
 			height: 680px;
 			background-position: 50% top, 50% 0;
-			// background-position: center 0px;
 			background-repeat: no-repeat, no-repeat;
-			// background-position: center 0;
 			background-attachment: fixed;
 			background-size: cover;
   		position: relative;
