--- a/app/public/assets/scss/_main.scss
+++ b/app/public/assets/scss/_main.scss
@@ -54,6 +54,17 @@ body {
   animation-iteration-count: 1;
 	@include set-sans-serif();
 
+	/* 右クリック制御 */
+	img {
+		pointer-events: none;
+		-webkit-touch-callout:none;
+		-webkit-user-select:none;
+		-moz-touch-callout:none;
+		-moz-user-select:none;
+		touch-callout:none;
+		user-select:none;
+	}
+
 	.topbar {
 		height: 5px;
 		width: 100%;
@@ -66,6 +77,12 @@ body {
 		@media (min-width: 1201px) { background: #dcdcdc; }	
 	}
 	.navbar {
+		img.logo {
+			width: 23px;
+			margin-right: 7px;
+			margin-top: -6px;
+		}
+
 		h1.navbar-brand-h1 {
 			margin-top: -9px;
 		}
@@ -86,32 +103,100 @@ body {
 	}
 	.big-banner {
 		background-size: cover;
+		// relate: big-banner:before
 		@media (max-width: 575px) {
 			background-image: url("/assets/img/top/bg-575.png");
 			height: 575px;
-			background-position: center 50%;
+			background-position: 50% top, 50% 0;
+			background-repeat: no-repeat, no-repeat;
+			background-attachment: fixed;
+			background-size: cover;
+  		position: relative;
+			z-index: 0;
+  		overflow: hidden;
 		}
 		@media (min-width: 576px) and (max-width: 768px) {
 			background-image: url("/assets/img/top/bg-768.png");
 			height: 680px;
-			background-position: center 50%;
+			background-position: 50% top, 50% 0;
+			background-repeat: no-repeat, no-repeat;
+			background-attachment: fixed;
+			background-size: cover;
+  		position: relative;
+			z-index: 0;
+  		overflow: hidden;
 		}
 		@media (min-width: 769px) and (max-width: 992px) {
 			background-image: url("/assets/img/top/bg-992.png");
 			height: 680px;
-			background-position: center 50%;
+			background-position: 50% top, 50% 0;
+			background-repeat: no-repeat, no-repeat;
+			background-attachment: fixed;
+			background-size: cover;
+  		position: relative;
+			z-index: 0;
+  		overflow: hidden;
 		}
 		@media (min-width: 993px) and (max-width: 1200px) {
 			background-image: url("/assets/img/top/bg-1200.png");
 			height: 680px;
-			background-position: center 50%;
+			background-position: 50% top, 50% 0;
+			background-repeat: no-repeat, no-repeat;
+			background-attachment: fixed;
+			background-size: cover;
+  		position: relative;
+			z-index: 0;
+  		overflow: hidden;
 		}
+		// @media (min-width: 1201px) {
+		// 	background-image: url("/assets/img/top/bg-1680.jpg");
+		// 	height: 680px;
+		// 	background-position: 0 0;
+		// 	// background-position: center 0px;
+		// 	background-repeat: no-repeat;
+		// 	background-size: cover;
+  	// 	position: relative;
+		// 	z-index: 0;
+  	// 	overflow: hidden;
+		// }
 		@media (min-width: 1201px) {
 			background-image: url("/assets/img/top/bg-1680.png");
 			height: 680px;
-			background-position: center 60%;
+			background-position: 50% top, 50% 0;
+			background-repeat: no-repeat, no-repeat;
+			background-attachment: fixed;
+			background-size: cover;
+  		position: relative;
+			z-index: 0;
+  		overflow: hidden;
+		}
+		.container {
+			h1 {
+				color: #fff;
+				font-family: sans-serif;
+			}
+			p.lead {
+				color: rgb(204, 204, 204);
+			}
+			
 		}
 	}
+	.big-banner-before:before {
+		// content: '';
+		// background: inherit;
+		// -webkit-filter: blur(0px);
+		// -moz-filter: blur(0px);
+		// -o-filter: blur(0px);
+		// -ms-filter: blur(0px);
+		// filter: blur(0px);
+		// position: absolute;
+		// top: -5px;
+		// left: -5px;
+		// right: -5px;
+		// bottom: -5px;
+		// z-index: -1;
+	}
+	
 	/* Login */
 	.login-contents-block {
 		.login {
@@ -268,13 +353,18 @@ body {
 				h1,h2,h3 {
 					font-size: 24px;
 					color: #444;
+					margin-top: 50px;
 				}
 				h4 {
-					font-size: 23px;
+					font-size: 20px;
 					color: #444;
 				}
-				h5,h6 {
-					font-size: 20px;
+				h5 {
+					font-size: 19px;
+					color: #444;
+				}
+				h6 {
+					font-size: 18px;
 					color: #444;
 				}
 				img {
@@ -302,6 +392,29 @@ body {
 						float:left;
 						margin-right: 20px;
 						margin-bottom: 5px;
+					}
+				}
+				blockquote {
+					border-left: 3px solid #c1c1c1;
+					padding: 6px 0px 0px 13px;
+					color: #555;
+					font-size: 15px;
+				}
+				pre {
+					background: #f5f5f5;
+					padding: 13px 25px;
+					border-radius: 3px;
+				}
+				p {
+					code {
+						color: #666;
+						font-weight: normal;
+						font-size: 15px;
+						background: #f5f5f5;
+						border: 1px solid #c1c1c1;
+						padding: 2px 5px;
+						border-radius: 3px;
+						margin: 0px 4px;
 					}
 				}
 			}
