--- a/app/public/assets/scss/_main.scss
+++ b/app/public/assets/scss/_main.scss
@@ -471,6 +471,8 @@ body {
 			}
       .image-list {
         a.modal-image-list {
+          cursor: pointer;
+          text-decoration: none;
           img.blog-image-thubnail {
             width: 80px;
             height: 80px;
