--- a/app/public/assets/scss/_main.scss
+++ b/app/public/assets/scss/_main.scss
@@ -331,6 +331,28 @@ body {
 					}
 				}
 			}
+      .document-menu {
+        // background: #ff0;
+        .menu-block {
+          text-align: center;
+          a {
+            display: block;
+          }
+          a:hover {
+            cursor: pointer;
+            opacity: 0.7;
+          }
+          img {
+            @media (max-width: 575px) {width: 300px;}
+            @media (min-width: 576px) and (max-width: 768px) {width: 150px;}
+            @media (min-width: 769px) and (max-width: 992px) {width: 150px;}
+            @media (min-width: 993px) and (max-width: 1200px) {width: 200px;}
+            @media (min-width: 1201px) {width: 200px;}
+            margin-bottom: 50px;
+            border-radius: 5px;
+          }
+        }
+      }
 			h4 {
 				line-height: 35px;
 			}
