--- a/app/public/assets/scss/_main.scss
+++ b/app/public/assets/scss/_main.scss
@@ -343,11 +343,12 @@ body {
             opacity: 0.7;
           }
           img {
-            @media (max-width: 575px) {width: 300px;}
-            @media (min-width: 576px) and (max-width: 768px) {width: 150px;}
-            @media (min-width: 769px) and (max-width: 992px) {width: 150px;}
-            @media (min-width: 993px) and (max-width: 1200px) {width: 200px;}
-            @media (min-width: 1201px) {width: 200px;}
+            object-fit: cover;
+            @media (max-width: 575px) {width: 250px;height: 250px;}
+            @media (min-width: 576px) and (max-width: 768px) {width: 150px;height: 150px;}
+            @media (min-width: 769px) and (max-width: 992px) {width: 150px;height:150px;}
+            @media (min-width: 993px) and (max-width: 1200px) {width: 150px;height:150px;}
+            @media (min-width: 1201px) {width: 150px;height:150px;}
             margin-bottom: 50px;
             border-radius: 5px;
           }
