--- a/app/public/assets/scss/_main.scss
+++ b/app/public/assets/scss/_main.scss
@@ -41,6 +41,7 @@ a:link, a:visited {
 a:hover, a:active {
 	color: #4682b4;
 	font-weight: 200;
+	text-decoration: underline;
 }
 
 @keyframes fade{
