--- a/app/public/assets/scss/_main.scss
+++ b/app/public/assets/scss/_main.scss
@@ -83,15 +83,23 @@ body {
 			@media (min-width: 576px) {width: 100%;}
 			display: block;
 			margin: 0 auto;
-			img {
-				margin: 0 auto;
-				padding: 0;
-				float: left;
+			a:link,a:visited {
 				display: block;
-				width: 100px;
-				height: 100px;
-				object-fit: cover;
+			margin: 0;
+			padding: 0;
+			opacity: 1;
+
+				img {
+					margin: 0 auto;
+					padding: 0;
+					float: left;
+					display: block;
+					width: 100px;
+					height: 100px;
+					object-fit: cover;
+				}
 			}
+
 		}
 	}
 	.topbar {
@@ -106,15 +114,23 @@ body {
 		@media (min-width: 1201px) { background: #dcdcdc; }	
 	}
 	.navbar {
-		img.logo {
-			width: 23px;
-			margin-right: 7px;
-			margin-top: -6px;
+		.sitename {
+			margin-top: -11px;
+      width: 200px;
+			img.logo {
+				width: 23px;
+				// margin-right: 7px;
+				margin-top: -6px;
+			}
+      h1.navbar-brand-h1 {
+        // margin-top: -9px;
+        display: inline;
+        // margin-left: 7px;
+      }
 		}
 
-		h1.navbar-brand-h1 {
-			margin-top: -9px;
-		}
+
+
 		form {
 			input {
 				border-radius: 3px 0 0 3px;
@@ -360,50 +376,97 @@ body {
 					}
 				}
 			}
+      /* 3 photo index link */
       .document-menu {
         margin: 0;
         padding: 0;
         margin-bottom:60px;
-        // display: flex;
-        // justify-content: center;
-        background: #333;
-        flex-wrap: wrap;
-        .blog-img-menu {
-          float:left;
-          margin: 0 auto;
-          padding: 0;
-          width: 33.33333%;
-          object-fit: cover;
-          filter: grayscale(70%);
-          filter: brightness(50%);
-          height:300px;
+				
+				@media (max-width: 767px) {
+					a:link, a:visited, a:hover, a:active {
+						display: block;
+						margin: 0;
+						padding: 0;
+						opacity: 1;
+						.menu-index {
+							position: relative;
+							width: 100%;
+							height: 300px;
+							span.text {
+								position: absolute;
+								top: 20px;
+								left: 20px;
+								z-index: 10000;
+								color: #fff;
+								font-size: 30px;
+								letter-spacing: 3px;
+                background: #000;
+                padding: 3px 17px;
+                border-radius: 3px;
+							}
+							img {
+								width: 100%;
+								height: 300px;
+								object-fit: cover;
+								filter: brightness(50%);
+							}
+						}
+					}
+				}
+				@media (min-width: 769px) and (max-width: 1200px) {
+					a:link, a:visited, a:hover, a:active {
+						display: block;
+            width: 33.3333%;
+            margin: 0;
+            padding: 0;
+            .menu-index {
+              position: relative;
+              width: 100%;
+              span.text {
+                position: absolute;
+                top: 10px;
+                left: 10px;
+                color: #fff;
+                font-size: 20px;
+                letter-spacing: 3px;
+                background: #000;
+                padding: 3px 12px;
+                border-radius: 3px;
+              }
+              img {
+                width: 100%;
+              }
+            }
+					} 
         }
-
-
-        .blog-img-menu {
-        // float: left;
-        // width: 100px;
+				@media (min-width: 1201px) {
+          a:link, a:visited, a:hover, a:active {
+						display: block;
+            width: 33.3333%;
+            margin: 0;
+            padding: 0;
+            .menu-index {
+              position: relative;
+              width: 100%;
+              span.text {
+                position: absolute;
+                top: 10px;
+                left: 10px;
+                color: #fff;
+                font-size: 20px;
+                letter-spacing: 3px;
+                background: #000;
+                padding: 3px 12px;
+                border-radius: 3px;
+              }
+              img {
+                width: 100%;
+              }
+            }
+					} 
         }
-        // background: #ff0;
-        // .menu-block {
-        //   text-align: center;
-
-        //   a:hover {
-        //     cursor: pointer;
-        //     opacity: 0.7;
-        //   }
-        //   img {
-        //     object-fit: cover;
-        //     @media (max-width: 575px) {width: 250px;height: 250px;}
-        //     @media (min-width: 576px) and (max-width: 768px) {width: 150px;height: 150px;}
-        //     @media (min-width: 769px) and (max-width: 992px) {width: 150px;height:150px;}
-        //     @media (min-width: 993px) and (max-width: 1200px) {width: 150px;height:150px;}
-        //     @media (min-width: 1201px) {width: 150px;height:150px;}
-        //     margin-bottom: 50px;
-        //     border-radius: 5px;
-        //   }
-        // }
       }
+
 			h4 {
 				line-height: 35px;
 			}
@@ -515,7 +578,21 @@ body {
               margin-bottom: 5px;
             }
           }
+          strong {
+            background: linear-gradient(transparent 75%, #c1e0ff 75%);
+            // color: #555;
+            font-weight: 200;
+          }
+          del {
+            color: #888;
+          }
+          em {
+            background:linear-gradient(transparent 75%, #ffc1e0 75%);
+            font-style: normal;
+          }
+
         }
+        
 				blockquote {
 					border-left: 3px solid #c1c1c1;
 					padding: 6px 0px 0px 13px;
@@ -558,6 +635,8 @@ body {
           cursor: pointer;
           // font-size:40px;
           text-decoration: none;
+					display: block;
+					float: left;
           img.modal-image {
             display: inline-block;
 						width: 80px;
@@ -616,9 +695,26 @@ body {
 							color: #555;
 						}
 					}
-					
 				}
 			}
+			.sendlink {
+				margin-bottom: 100px;
+				text-align: center;
+				a {
+					margin-left: 10px;
+					margin-right: 10px;
+				}
+			}
+      /* archives */
+      .archives {
+        // background: #00f;
+        ul {
+          li {
+            list-style: circle;
+            // margin-left: -20px;
+          }
+        }
+      }
 			/* Sidebar */
 			.menu {
 				li {
