local: get site name from .env para

--- a/app/public/assets/scss/_main.scss
+++ b/app/public/assets/scss/_main.scss
@@ -78,6 +78,7 @@ body {
 		// position: relative;
 		.blog-ul {
 			margin-left: 10px;
+			margin-bottom: 5px;
 			.blog-li {
 				.blog-date {
 					font-size: 10px;
@@ -561,7 +562,7 @@ body {
           display: block;
           background: #ff0;
           height: auto;
-          img>＞ {
+          img {
             float: both;
           }
         }
