--- a/app/public/assets/scss/_main.scss
+++ b/app/public/assets/scss/_main.scss
@@ -829,6 +829,9 @@ body {
       .tumbnail-li {
         display: inline-block;
         list-style: none;
+        .delete-mark:hover {
+          cursor: pointer;
+        }
         img {
           width: 100px;
         }
