--- a/app/public/assets/scss/_main.scss
+++ b/app/public/assets/scss/_main.scss
@@ -157,6 +157,12 @@ body {
 	.big-banner {
 		background-size: cover;
 		background-color: #444;
+    // .big-menu {
+    //   .big-menu-list {
+    //     //
+    //     background: #ff0;
+    //   }
+    // }
 		@media (max-width: 575px) {
 			background-image: url("/assets/img/top/bg-575.png");
 			height: 575px;
@@ -167,6 +173,20 @@ body {
   		position: relative;
 			z-index: 0;
   		overflow: hidden;
+      .big-menu {
+        margin-top: 80px;
+        .big-menu-list {
+          list-style: none;
+          li {
+            display: block;
+            // background: #ff0;
+            img.big-menu-image {
+              width: 100px;
+              border-radius: 50%;
+            }
+          }
+        }
+      }
 		}
 		@media (min-width: 576px) and (max-width: 768px) {
 			background-image: url("/assets/img/top/bg-768.png");
@@ -243,41 +263,9 @@ body {
 			p.lead {
 				color: rgb(204, 204, 204);
 			}
-			
 		}
 	}
-	.big-banner-before:before {
-		// content: '';
-		// background: inherit;
-		// -webkit-filter: blur(0px);
-		// -moz-filter: blur(0px);
-		// -o-filter: blur(0px);
-		// -ms-filter: blur(0px);
-		// filter: blur(0px);
-		// position: absolute;
-		// top: -5px;
-		// left: -5px;
-		// right: -5px;
-		// bottom: -5px;
-		// z-index: -1;
-	}
 
-	.big-banner-before:before {
-		// content: '';
-		// background: inherit;
-		// -webkit-filter: blur(0px);
-		// -moz-filter: blur(0px);
-		// -o-filter: blur(0px);
-		// -ms-filter: blur(0px);
-		// filter: blur(0px);
-		// position: absolute;
-		// top: -5px;
-		// left: -5px;
-		// right: -5px;
-		// bottom: -5px;
-		// z-index: -1;
-	}
-	
 	/* Login */
 	.login-contents-block {
 		.login {
@@ -474,9 +462,15 @@ body {
 					} 
         }
       }
-
-			h4 {
+      h3.single-title {
+        // color: red;
+        margin-top: 40px;
+        line-height: 42px;
+        word-break: break-all;
+      }
+			h4,h5,h6 {
 				line-height: 35px;
+        word-break: break-all;
 			}
       h4.blog-top-title {
         // background: #ff0;
@@ -527,7 +521,10 @@ body {
 					font-size: 24px;
 					color: #444;
 					margin-top: 50px;
-          margin-bottom: 27px;
+          			margin-bottom: 27px;
+				}
+				.single-title {
+					color:red;
 				}
 				h4 {
 					font-size: 20px;
@@ -580,6 +577,7 @@ body {
           margin: 26px 0;
         }
         p {
+          overflow-wrap: break-word;
           img {
             margin-top: 20px;
             @media (max-width: 575px) {
@@ -624,7 +622,6 @@ body {
             background:linear-gradient(transparent 75%, #ffc1e0 75%);
             font-style: normal;
           }
-
         }
         
 				blockquote {
